archeobot/config/manager/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  # Allow intra namespace communication
  name: intra-ns
  namespace: system
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
